--- a/index.html
+++ b/index.html
@@ -1,50 +1,67 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="author" content="Bootstrap-ecommerce by Vosidiy">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="author" content="Bootstrap-ecommerce by Vosidiy">
 
-<title>UI KIT - Marketplace and Ecommerce html template</title>
+	<title>INSIDE VOICE</title>
 
-<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="images/inside-voice.png"/>
 
-<!-- jQuery -->
-<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
+	<!-- jQuery -->
+	<script src="js/jquery-2.0.0.min.js" type="text/javascript"></script>
 
-<!-- Bootstrap4 files-->
-<script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+	<!-- Bootstrap4 files-->
+	<script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-<!-- Font awesome 5 -->
-<link href="fonts/fontawesome/css/fontawesome-all.min.css" type="text/css" rel="stylesheet">
+	<!-- Font awesome 5 -->
+	<link href="fonts/fontawesome/css/fontawesome-all.min.css" type="text/css" rel="stylesheet" />
 
-<!-- plugin: fancybox  -->
-<script src="plugins/fancybox/fancybox.min.js" type="text/javascript"></script>
-<link href="plugins/fancybox/fancybox.min.css" type="text/css" rel="stylesheet">
+	<!-- plugin: fancybox  -->
+	<script src="plugins/fancybox/fancybox.min.js" type="text/javascript"></script>
+	<link href="plugins/fancybox/fancybox.min.css" type="text/css" rel="stylesheet" />
 
-<!-- custom style -->
-<link href="css/ui.css" rel="stylesheet" type="text/css"/>
-<link href="css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
+	<!-- plugin: owl carousel  -->
+	<link href="plugins/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+	<link href="plugins/owlcarousel/assets/owl.theme.default.css" rel="stylesheet">
+	<script src="plugins/owlcarousel/owl.carousel.min.js"></script>
 
-<!-- custom javascript -->
-<script src="js/script.js" type="text/javascript"></script>
+	<!-- plugin: slickslider -->
+	<link href="plugins/slickslider/slick.css" rel="stylesheet" type="text/css" />
+	<link href="plugins/slickslider/slick-theme.css" rel="stylesheet" type="text/css" />
+	<script src="plugins/slickslider/slick.min.js"></script>
 
-<script type="text/javascript">
-/// some script
+	<!-- custom style -->
+	<link href="css/ui.css" rel="stylesheet" type="text/css" />
+	<link href="css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
-// jquery ready start
-$(document).ready(function() {
-	// jQuery code
+	<!--our style-->
+	<link href="css/styles.css" rel="stylesheet" type="text/css" />
 
-}); 
-// jquery end
-</script>
+	<!-- custom javascript -->
+	<script src="js/script.js" type="text/javascript"></script>
+
+	<script type="text/javascript">
+		/// some script
+
+		// jquery ready start
+		$(document).ready(function () {
+			// jQuery code
+
+		});
+		// jquery end
+	</script>
+
+</head>
 
 </head>
 <body>
 <header class="section-header">
-<nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary fixed-top">
+<!-- <a class="navbar-brand text-light" href="#">INSIDE VOICE</a> -->
 <div class="container">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -52,7 +69,7 @@ $(document).ready(function() {
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
 <li class="nav-item active">
-<a class="nav-link" href="http://bootstrap-ecommerce.com">Home <span class="sr-only">(current)</span></a>
+<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item"><a class="nav-link" href="html-components.html"> Documentation </a></li>
 
@@ -63,11 +80,65 @@ $(document).ready(function() {
 	  <li><a class="dropdown-item" href="#"> Menu item 2 </a></li>
     </ul>
 </li>
-<li class="nav-item"><a class="nav-link" href="http://bootstrap-ecommerce.com"> Download <i class="fa fa-download"></i></a></li>
+<li class="nav-item"><a class="nav-link" href="#"> Download </a></li>
     </ul>
   </div>
 </div> <!-- container //  -->
 
+<div class="col-lg-9-24 col-sm-12">
+	<div class="widgets-wrap float-right row no-gutters py-1">
+		<div class="col-auto">
+		<div class="widget-header dropdown">
+			<a href="#" data-toggle="dropdown" data-offset="20,10">
+				<div class="icontext">
+					<div class="icon-wrap"><i class="text-light icon-sm fa fa-user"></i></div>
+					<div class="text-wrap text-secondary">
+						Sign in <br>
+						My account <i class="fa fa-caret-down"></i> 
+					</div>
+				</div>
+			</a>
+			<div class="dropdown-menu">
+				<form class="px-4 py-3">
+					<div class="form-group">
+					  <label>Email address</label>
+					  <input type="email" class="form-control" placeholder="email@example.com">
+					</div>
+					<div class="form-group">
+					  <label>Password</label>
+					  <input type="password" class="form-control" placeholder="Password">
+					</div>
+					<button type="submit" class="btn btn-primary">Sign in</button>
+					</form>
+					<hr class="dropdown-divider">
+					<a class="dropdown-item" href="#">Have account? Sign up</a>
+					<a class="dropdown-item" href="#">Forgot password?</a>
+			</div> <!--  dropdown-menu .// -->
+		</div>  <!-- widget-header .// -->
+		</div> <!-- col.// -->
+		<div class="col-auto">
+			<a href="#" class="widget-header">
+				<div class="icontext">
+					<div class="icon-wrap"><i class="text-light icon-sm fa fa-shopping-cart"></i></div>
+					<div class="text-wrap text-secondary">
+						Order <br> Protection 
+					</div>
+				</div>
+			</a>
+		</div> <!-- col.// -->
+		<div class="col-auto">
+			<a href="#" class="widget-header">
+				<div class="icontext">
+					<div class="icon-wrap"><i class="text-light icon-sm  fa fa-heart"></i></div>
+					<div class="text-wrap text-secondary">
+						<span class="small round badge badge-danger">0</span>
+						<div>Favorites</div>
+					</div>
+				</div>
+			</a>
+		</div> <!-- col.// -->
+	</div> <!-- widgets-wrap.// row.// -->
+</div> <!-- col.// -->
 </nav>
 
 <section class="header-main bg">
@@ -75,8 +146,8 @@ $(document).ready(function() {
 <div class="row align-items-center">
 	<div class="col-md-4">
 	<div class="brand-wrap">
-		<img class="logo" src="images/logo-dark.png">
-		<h2 class="logo-text">LOGO</h2>
+		<img class="logo" src="images/inside-voice.png">
+		<h2 class="logo-text">INSIDE VOICE</h2>
 	</div> <!-- brand-wrap.// -->
 	</div>
 	<div class="col-md-4">
@@ -99,6 +170,23 @@ $(document).ready(function() {
 	</div> <!-- container.// -->
 </section> <!-- header-main .// -->
 </header> <!-- section-header.// -->
+
+<!-- ========================= SECTION INTRO ========================= -->
+<section class="section-intro pt-0">
+	<div class="container-fluid intro">
+		<div class="row d-flex" style="min-height:600px;">
+			<div class="col-sm-6 d-flex align-items-center">
+				<header class="intro-wrap text-white header-m-left">
+					<h2 class="display-3 text-white"> Amazing place for  hero title </h2>
+					<p class="lead">Bootstrap ecommerce is more then template - also framework. <br> It is modern and fully customizable websites, WebApp and Mobile template for Your Project</p>
+					<a href="#" class="btn btn-primary">Download</a>
+					<a href="#" class="btn btn-light">Learn more</a>
+				</header>  <!-- intro-wrap .// -->
+			</div> <!-- col.// -->
+		</div> <!-- row.// -->
+	</div> <!-- container .//  -->
+</section>
+<!-- ========================= SECTION INTRO END// ========================= -->
 
 
 <section class="section-content padding-y">
