--- a/index.html
+++ b/index.html
@@ -61,29 +61,24 @@
 <body>
 <header class="section-header">
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary fixed-top">
-<!-- <a class="navbar-brand text-light" href="#">INSIDE VOICE</a> -->
 <div class="container">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-<li class="nav-item active">
-<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-</li>
-<li class="nav-item"><a class="nav-link" href="html-components.html"> Documentation </a></li>
-
-<li class="nav-item dropdown">
-	<a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">  Dropdown  </a>
-    <ul class="dropdown-menu">
-	  <li><a class="dropdown-item" href="#"> Menu item 1</a></li>
-	  <li><a class="dropdown-item" href="#"> Menu item 2 </a></li>
-    </ul>
-</li>
-<li class="nav-item"><a class="nav-link" href="#"> Download </a></li>
+		<li class="nav-item active">
+		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
+		<li class="nav-item"><a class="nav-link" href="html-components.html"> Decorations </a></li>
+		<li class="nav-item"><a class="nav-link" href="html-components.html"> Furniture </a></li>
+		<li class="nav-item"><a class="nav-link" href="html-components.html"> Tableware </a></li>
     </ul>
   </div>
 </div> <!-- container //  -->
+
+<div class="col-md-3 col-sm-3 logo-centered">
+	<a class="navbar-brand white" href="#">INSIDE VOICE</a>
+</div>
 
 <div class="col-lg-9-24 col-sm-12">
 	<div class="widgets-wrap float-right row no-gutters py-1">
@@ -93,8 +88,7 @@
 				<div class="icontext">
 					<div class="icon-wrap"><i class="text-light icon-sm fa fa-user"></i></div>
 					<div class="text-wrap text-secondary">
-						Sign in <br>
-						My account <i class="fa fa-caret-down"></i> 
+						Sign in 
 					</div>
 				</div>
 			</a>
@@ -121,7 +115,7 @@
 				<div class="icontext">
 					<div class="icon-wrap"><i class="text-light icon-sm fa fa-shopping-cart"></i></div>
 					<div class="text-wrap text-secondary">
-						Order <br> Protection 
+						Cart 
 					</div>
 				</div>
 			</a>
@@ -131,55 +125,46 @@
 				<div class="icontext">
 					<div class="icon-wrap"><i class="text-light icon-sm  fa fa-heart"></i></div>
 					<div class="text-wrap text-secondary">
-						<span class="small round badge badge-danger">0</span>
 						<div>Favorites</div>
 					</div>
 				</div>
 			</a>
 		</div> <!-- col.// -->
+		<div class="col-auto">
+			<div href="#" class="widget-header dropdown">
+				<a href="#" data-toggle="dropdown" data-offset="20,10">
+					<div class="icontext">
+						<div class="icon-wrap"><i class="text-light icon-sm  fa fa-search"></i></div>
+					</div>
+				</a>
+				<div class="dropdown-menu search-menu">
+					<form action="#" class="widget-header float-right">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Search">
+							<div class="input-group-append">
+								<button class="btn btn-primary" type="submit">
+								<i class="fa fa-search"></i>
+								</button>
+							</div>
+						</div>
+					</form> <!-- search-wrap .end// -->
+				</div> <!--  dropdown-menu .// -->
+			</div>
+		</div> <!-- col.// -->
 	</div> <!-- widgets-wrap.// row.// -->
 </div> <!-- col.// -->
 </nav>
-
-<section class="header-main bg">
-	<div class="container">
-<div class="row align-items-center">
-	<div class="col-md-4">
-	<div class="brand-wrap">
-		<img class="logo" src="images/inside-voice.png">
-		<h2 class="logo-text">INSIDE VOICE</h2>
-	</div> <!-- brand-wrap.// -->
-	</div>
-	<div class="col-md-4">
-
-	</div> <!-- col.// -->
-	<div class="col-md-4">
-			<form action="#" class="widget-header float-right">
-				<div class="input-group">
-				    <input type="text" class="form-control" placeholder="Search">
-				    <div class="input-group-append">
-				      <button class="btn btn-primary" type="submit">
-				        <i class="fa fa-search"></i>
-				      </button>
-				    </div>
-			    </div>
-			</form> <!-- search-wrap .end// -->
-	</div> <!-- col.// -->
-
-</div> <!-- row.// -->
-	</div> <!-- container.// -->
-</section> <!-- header-main .// -->
 </header> <!-- section-header.// -->
 
 <!-- ========================= SECTION INTRO ========================= -->
-<section class="section-intro pt-0">
+<section class="section-intro pt-0 header-main">
 	<div class="container-fluid intro">
 		<div class="row d-flex" style="min-height:600px;">
 			<div class="col-sm-6 d-flex align-items-center">
 				<header class="intro-wrap text-white header-m-left">
-					<h2 class="display-3 text-white"> Amazing place for  hero title </h2>
-					<p class="lead">Bootstrap ecommerce is more then template - also framework. <br> It is modern and fully customizable websites, WebApp and Mobile template for Your Project</p>
-					<a href="#" class="btn btn-primary">Download</a>
+					<h2 class="display-3 text-white"> Cozy mugs are back in stock </h2>
+					<p class="lead">Don't hesitate to buy one of these cute mugs. <br> Perfect for enjoying hot chocolate on cold days!</p>
+					<a href="#" class="btn btn-primary">By now</a>
 					<a href="#" class="btn btn-light">Learn more</a>
 				</header>  <!-- intro-wrap .// -->
 			</div> <!-- col.// -->
@@ -188,110 +173,142 @@
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
 
-
-<section class="section-content padding-y">
+<!-- ============== owl slide items 2  ============= -->
 <div class="container">
-
-<header class="section-heading">
-	<h2>Section name</h2>
-</header><!-- sect-heading -->
-
-<article>
-
-<img src="images/brand.png" class="float-right">
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<br><br><br><br><br><br><br><br><br>
-
-</article>
-
-</div> <!-- container .//  -->
-</section>
-<!-- ========================= SECTION CONTENT END// ========================= -->
+	<div class="row">
+		<div class="owl-carousel owl-init slide-items" id="slide_custom_nav" data-custom-nav="custom-nav-first"
+			data-items="5" data-margin="20" data-dots="false" data-nav="false">
+			<a href="products/hoo-la-la-poster.html">
+				<div class="item-slide">
+					<figure class="card card-product">
+						<span class="badge-new"> NEW </span>
+						<div class="img-wrap"> <img src="images/items/hoo-la-la-poster.jpg"> </div>
+						<figcaption class="info-wrap text-center">
+							<h6 class="title text-truncate">Hoo La La Poster</h6>
+						</figcaption>
+					</figure> <!-- card // -->
+				</div>
+			</a>
+			<a href="products/minimalist-mirror-wood.html">
+				<div class="item-slide">
+					<figure class="card card-product">
+						<div class="img-wrap"> <img src="images/items/minimalist-mirror-wood.jpg"> </div>
+						<figcaption class="info-wrap text-center">
+							<h6 class="title text-truncate">Minimalistic Mirror</h6>
+						</figcaption>
+					</figure> <!-- card // -->
+				</div>
+			</a>
+			<a href="products/bae-wood-chair.html">
+				<div class="item-slide">
+					<figure class="card card-product">
+						<div class="img-wrap"> <img src="images/items/bar-wood-chair.jpg"> </div>
+						<figcaption class="info-wrap text-center">
+							<h6 class="title text-truncate">Bar Wood Chair</h6>
+						</figcaption>
+					</figure> <!-- card // -->
+				</div>
+			</a>
+			<a href="products/braided-cozy-chair.html">
+				<div class="item-slide">
+					<figure class="card card-product">
+						<div class="img-wrap"> <img src="images/items/braided-chair.jpg"> </div>
+						<figcaption class="info-wrap text-center">
+							<h6 class="title text-truncate">Braided Chair</h6>
+						</figcaption>
+					</figure> <!-- card // -->
+				</div>
+			</a>
+			<a href="products/relax-chair.html">
+				<div class="item-slide">
+					<figure class="card card-product">
+						<div class="img-wrap"> <img src="images/items/relax-chair.jpg"> </div>
+						<figcaption class="info-wrap text-center">
+							<h6 class="title text-truncate">Casual Relax Chair</h6>
+						</figcaption>
+					</figure> <!-- card // -->
+				</div>
+			</a>
+			<a href="products/yellow-reading-chair.html">
+				<div class="item-slide">
+					<figure class="card card-product">
+						<div class="img-wrap"> <img src="images/items/yellow-reading-chair.jpg"> </div>
+						<figcaption class="info-wrap text-center">
+							<h6 class="title text-truncate">Yellow Reading Chair</h6>
+						</figcaption>
+					</figure> <!-- card // -->
+				</div>
+			</a>
+		</div>
+	</div>
+</div>
+<!-- ============== owl slide items 2 .end // ============= -->
 
 <!-- ========================= FOOTER ========================= -->
 <footer class="section-footer bg-primary">
-		<div class="container">
-			<section class="footer-top padding-top">
-				<div class="row">
-					<aside class="col-sm-3 col-md-3 white">
-						<h5 class="title white">Customer Services</h5>
-						<ul class="list-unstyled">
-							<li> <a href="#">Help center</a></li>
-							<li> <a href="#">Money refund</a></li>
-							<li> <a href="#">Terms and Policy</a></li>
-							<li> <a href="#">Open dispute</a></li>
-						</ul>
-					</aside>
-					<aside class="col-sm-3  col-md-3 white">
-						<h5 class="title white">My Account</h5>
-						<ul class="list-unstyled">
-							<li> <a href="#"> User Login </a></li>
-							<li> <a href="#"> User register </a></li>
-							<li> <a href="#"> Account Setting </a></li>
-							<li> <a href="#"> My Orders </a></li>
-							<li> <a href="#"> My Wishlist </a></li>
-						</ul>
-					</aside>
-					<aside class="col-sm-3  col-md-3 white">
-						<h5 class="title white">About</h5>
-						<ul class="list-unstyled">
-							<li> <a href="#"> Our history </a></li>
-							<li> <a href="#"> How to buy </a></li>
-							<li> <a href="#"> Delivery and payment </a></li>
-							<li> <a href="#"> Advertice </a></li>
-							<li> <a href="#"> Partnership </a></li>
-						</ul>
-					</aside>
-					<aside class="col-sm-3">
-						<article class="white">
-							<h5 class="title white">Contacts</h5>
-							<p>
-								<strong>Phone: </strong> +123456789 <br> 
-								<strong>Fax:</strong> +123456789
-							</p>
-	
-							 <div class="btn-group white">
-								<a class="btn btn-facebook" title="Facebook" target="_blank" href="#"><i class="fab fa-facebook-f  fa-fw"></i></a>
-								<a class="btn btn-instagram" title="Instagram" target="_blank" href="#"><i class="fab fa-instagram  fa-fw"></i></a>
-								<a class="btn btn-youtube" title="Youtube" target="_blank" href="#"><i class="fab fa-youtube  fa-fw"></i></a>
-								<a class="btn btn-twitter" title="Twitter" target="_blank" href="#"><i class="fab fa-twitter  fa-fw"></i></a>
-							</div>
-						</article>
-					</aside>
-				</div> <!-- row.// -->
-				<br> 
-			</section>
-			<section class="footer-bottom row border-top-white">
-				<div class="col-sm-6"> 
-					<p class="text-white-50"> Made with <3 <br>  by Vosidiy M.</p>
-				</div>
-				<div class="col-sm-6">
-					<p class="text-md-right text-white-50">
-		Copyright &copy  <br>
-	<a href="http://bootstrap-ecommerce.com" class="text-white-50">Bootstrap-ecommerce UI kit</a>
-					</p>
-				</div>
-			</section> <!-- //footer-top -->
-		</div><!-- //container -->
-	</footer>
-	<!-- ========================= FOOTER END // ========================= -->
+	<div class="container">
+		<section class="footer-top padding-top">
+			<div class="row">
+				<aside class="col-sm-3 col-md-3 white">
+					<h5 class="title white">Customer Services</h5>
+					<ul class="list-unstyled">
+						<li> <a href="#">Help center</a></li>
+						<li> <a href="#">Money refund</a></li>
+						<li> <a href="#">Terms and Policy</a></li>
+						<li> <a href="#">Open dispute</a></li>
+					</ul>
+				</aside>
+				<aside class="col-sm-3  col-md-3 white">
+					<h5 class="title white">My Account</h5>
+					<ul class="list-unstyled">
+						<li> <a href="#"> User Login </a></li>
+						<li> <a href="#"> User register </a></li>
+						<li> <a href="#"> Account Setting </a></li>
+						<li> <a href="#"> My Orders </a></li>
+						<li> <a href="#"> My Wishlist </a></li>
+					</ul>
+				</aside>
+				<aside class="col-sm-3  col-md-3 white">
+					<h5 class="title white">About</h5>
+					<ul class="list-unstyled">
+						<li> <a href="#"> Our history </a></li>
+						<li> <a href="#"> How to buy </a></li>
+						<li> <a href="#"> Delivery and payment </a></li>
+						<li> <a href="#"> Advertice </a></li>
+						<li> <a href="#"> Partnership </a></li>
+					</ul>
+				</aside>
+				<aside class="col-sm-3">
+					<article class="white">
+						<h5 class="title white">Contacts</h5>
+						<p>
+							<strong>Phone: </strong> +123456789 <br> 
+							<strong>Fax:</strong> +123456789
+						</p>
+							<div class="btn-group white">
+							<a class="btn btn-facebook" title="Facebook" target="_blank" href="#"><i class="fab fa-facebook-f  fa-fw"></i></a>
+							<a class="btn btn-instagram" title="Instagram" target="_blank" href="#"><i class="fab fa-instagram  fa-fw"></i></a>
+							<a class="btn btn-youtube" title="Youtube" target="_blank" href="#"><i class="fab fa-youtube  fa-fw"></i></a>
+							<a class="btn btn-twitter" title="Twitter" target="_blank" href="#"><i class="fab fa-twitter  fa-fw"></i></a>
+						    </div>
+					</article>
+				</aside>
+			</div> <!-- row.// -->
+			<br> 
+		</section>
+		<section class="footer-bottom row border-top-white">
+			<div class="col-sm-6"> 
+				<p class="text-white-50"> Made with <3 <br>  by Vosidiy M.</p>
+			</div>
+			<div class="col-sm-6">
+				<p class="text-md-right text-white-50">Copyright &copy  <br>
+				<a href="http://bootstrap-ecommerce.com" class="text-white-50">Bootstrap-ecommerce UI kit</a>
+				</p>
+			</div>
+		</section> <!-- //footer-top -->
+	</div><!-- //container -->
+</footer>
+<!-- ========================= FOOTER END // ========================= -->
 
 
 </body>
