--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <ul class="navbar-nav">
 		<li class="nav-item active">
 		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-		<li class="nav-item"><a class="nav-link" href="html-components.html"> Decorations </a></li>
+		<li class="nav-item"><a class="nav-link" href="categories/decorations.html"> Decorations </a></li>
 		<li class="nav-item"><a class="nav-link" href="html-components.html"> Furniture </a></li>
 		<li class="nav-item"><a class="nav-link" href="html-components.html"> Tableware </a></li>
     </ul>
