--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 		<li class="nav-item active">
 		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
 		<li class="nav-item"><a class="nav-link" href="categories/decorations.html"> Decorations </a></li>
-		<li class="nav-item"><a class="nav-link" href="html-components.html"> Furniture </a></li>
-		<li class="nav-item"><a class="nav-link" href="html-components.html"> Tableware </a></li>
+		<li class="nav-item"><a class="nav-link" href="categories/furniture.html"> Furniture </a></li>
+		<li class="nav-item"><a class="nav-link" href="categories/tableware.html"> Tableware </a></li>
     </ul>
   </div>
 </div> <!-- container //  -->
