Decoration products were added

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<div class="icon-wrap"><i class="text-light icon-sm  fa fa-search"></i></div>
 					</div>
 				</a>
-				<div class="dropdown-menu search-menu">
+				<div class="dropdown-menu dropdown-menu-right">
 					<form action="#" class="widget-header float-right">
 						<div class="input-group">
 							<input type="text" class="form-control" placeholder="Search">
