--- a/products/dinning-set.html
+++ b/products/dinning-set.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
 				<li class="nav-item"><a class="nav-link" href="../index.html"> Home </a></li>
 				<li class="nav-item"><a class="nav-link" href="../categories/decorations.html"> Decorations </a></li>
 				<li class="nav-item active"><a class="nav-link" href="../categories/furniture.html"> Furniture <span class="sr-only">(current)</span></a></li>
-				<li class="nav-item"><a class="nav-link" href="../categories/tablewarre.html"> Tableware </a></li>
+				<li class="nav-item"><a class="nav-link" href="../categories/tableware.html"> Tableware </a></li>
 			</ul>
 		  </div>
 		</div> <!-- container //  -->
