Contacts and Registration pages were added

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -103,7 +103,7 @@
 							<button type="submit" class="btn btn-primary">Sign in</button>
 							</form>
 							<hr class="dropdown-divider">
-							<a class="dropdown-item" href="#">Have account? Sign up</a>
+							<a class="dropdown-item" href="registration.html">Have account? Sign up</a>
 							<a class="dropdown-item" href="#">Forgot password?</a>
 					</div> <!--  dropdown-menu .// -->
 				</div>  <!-- widget-header .// -->
