--- a/products/minimalist-mirror-wood.html
+++ b/products/minimalist-mirror-wood.html
@@ -104,7 +104,7 @@
 							<button type="submit" class="btn btn-primary">Sign in</button>
 							</form>
 							<hr class="dropdown-divider">
-							<a class="dropdown-item" href="#">Have account? Sign up</a>
+							<a class="dropdown-item" href="../pages/registration.html">Have account? Sign up</a>
 							<a class="dropdown-item" href="#">Forgot password?</a>
 					</div> <!--  dropdown-menu .// -->
 				</div>  <!-- widget-header .// -->
