--- a/products/modern-bar-chair.html
+++ b/products/modern-bar-chair.html
@@ -103,7 +103,7 @@ $(document).ready(function() {
 							<button type="submit" class="btn btn-primary">Sign in</button>
 							</form>
 							<hr class="dropdown-divider">
-							<a class="dropdown-item" href="#">Have account? Sign up</a>
+							<a class="dropdown-item" href="../pages/registration.html">Have account? Sign up</a>
 							<a class="dropdown-item" href="#">Forgot password?</a>
 					</div> <!--  dropdown-menu .// -->
 				</div>  <!-- widget-header .// -->
